# sloppy-compressor

./: Cargo.toml  README.md
.github/workflows/: build.yml
benches/: lz77_benchmarks.rs
src/: bitvec_issues.rs  block_compress.rs  compression.rs  lib.rs  lz77.rs  main.rs
src/lz77/: compress.rs  mod.rs  nodes.rs  serialisation.rs  window_byte_container.rs
tests/: lz77_perf.rs
