[package]
name = "sloppy-compressor"
version = "0.1.0"
authors = ["Neil Williams <neil.williams@growthstreet.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
md5 = "0.7.0"
hex = "0.4.2"
bincode = "1.3.1"
serde = { version = "1.0.117", features = ["derive"] }
bitvec = "0.20.0"

[dev-dependencies]
criterion = "0.3"

[profile.release]
debug = true

[[bench]]
name = "lz77_benchmarks"
harness = false

[lib]
name = "sloppycomp"
